--- a/IA/A3/index.html
+++ b/IA/A3/index.html
@@ -13,9 +13,9 @@
     <p></p>
 
 
-    <div class="container">
+    <div class="container" style="max-width: 90%; width: 90%;">
         <div class="row mt-5">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Training Settings</h5>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Training Result</h5>
@@ -36,12 +36,20 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-md-12">
+        <div class="row mt-5">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Confusion Matrix</h5>
                         <div id="output_confusion_matrix"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Loss Curve</h5>
+                        <div id="output_loss_curve"></div>
                     </div>
                 </div>
             </div>
