--- a/IA/A3/index.html
+++ b/IA/A3/index.html
@@ -7,13 +7,36 @@
       <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.3/core.css">
       <script type="module" src="https://pyscript.net/releases/2024.1.3/core.js"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  </head>
+  
+      <style>
+        img {
+            vertical-align: middle;
+            border-style: none;
+            max-width: 100%;
+        }
+
+        .container {
+            max-width: 90%; 
+            width: 90%;
+        }
+
+        #output_confusion_matrix {
+            text-align: center;
+        }
+
+        #output_loss_curve {
+            text-align: center;
+        }
+
+    </style>
+  
+    </head>
   <body>
     <h1></h1>
     <p></p>
 
 
-    <div class="container" style="max-width: 90%; width: 90%;">
+    <div class="container">
         <div class="row mt-5">
             <div class="col-md-6">
                 <div class="card">
