--- a/IA/A3/index.html
+++ b/IA/A3/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width,initial-scale=1" />
-      <title></title>
+      <title>MLP Trainer</title>
       <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.3/core.css">
       <script type="module" src="https://pyscript.net/releases/2024.1.3/core.js"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -32,8 +32,8 @@
   
     </head>
   <body>
-    <h1></h1>
-    <p></p>
+    <h1 style="padding-left: 6%">MLP Trainer</h1>
+    <p style="padding-left: 6%">Copyright Abel Garcia</p>
 
 
     <div class="container">
