--- a/IA/A3/index.html
+++ b/IA/A3/index.html
@@ -19,6 +19,10 @@
             max-width: 90%; 
             width: 90%;
         }
+        
+        .card {
+            height: 100%;
+        }
 
         #output_confusion_matrix {
             text-align: center;
