--- a/IA/A4/index.html
+++ b/IA/A4/index.html
@@ -31,6 +31,14 @@
         #output_loss_curve {
             text-align: center;
         }
+        
+        #output_hidden_layer_sizes {
+            text-align: center;
+        }
+
+        #output_hidden_layer_sizes_no_input_layer {
+            text-align: center;
+        }
 
     </style>
   
