--- a/CV/Binarization/index.html
+++ b/CV/Binarization/index.html
@@ -69,6 +69,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Binarization Result</h5>
                         <div id="output_binarization_result"></div>
+                        <img id="image"/>
                     </div>
                 </div>
             </div>
