--- a/CV/Binarization/index.html
+++ b/CV/Binarization/index.html
@@ -60,7 +60,7 @@
                             <input type="text" class="form-control" id="learning_rate_text" placeholder="Enter learning rate (e.g.: 0.01)">
                             <br>
                         </div>
-                        <button class="btn btn-primary" py-click="learning_rate_button">Train</button>
+                        <button class="btn btn-primary" py-click="button">Train</button>
                     </div>
                 </div>
             </div>
