--- a/CV/Binarization/index.html
+++ b/CV/Binarization/index.html
@@ -56,8 +56,8 @@
                             <input type="file" id="imagefile" name="imagefile">
                             <br>
                             <br>
-                            <label for="learningRate">Binarization threshold:</label>
-                            <input type="text" class="form-control" id="learning_rate_text" placeholder="Enter learning rate (e.g.: 0.01)">
+                            <label for="threshold">Binarization threshold:</label>
+                            <input type="text" class="form-control" id="threshold_text" placeholder="Enter threshold (e.g.: 100)">
                             <br>
                         </div>
                         <button class="btn btn-primary" py-click="button">Train</button>
