--- a/CV/Binarization/Global/index.html
+++ b/CV/Binarization/Global/index.html
@@ -41,6 +41,7 @@
     </head>
   <body>
     <h1 style="padding-left: 6%">Binarization</h1>
+    <h2 style="padding-left: 6%">Global Thresholding</h2>
     <p style="padding-left: 6%">Copyright Abel Garcia</p>
 
 
