--- a/CV/Binarization/Local/Niblack/index.html
+++ b/CV/Binarization/Local/Niblack/index.html
@@ -40,7 +40,8 @@
   
     </head>
   <body>
-    <h1 style="padding-left: 6%">Niblack Thresholding</h1>
+    <h1 style="padding-left: 6%">Binarization</h1>
+    <h2 style="padding-left: 6%">Niblack Thresholding</h2>
     <p style="padding-left: 6%">Copyright Abel Garcia</p>
 
 
