--- a/CV/Morphology/index.html
+++ b/CV/Morphology/index.html
@@ -24,15 +24,11 @@
             height: 100%;
         }
 
-        #output_binarization_result {
+        #output_result {
             text-align: center;
         }
         
         #output_original_image {
-            text-align: center;
-        }
-
-        #output_original_image_with_values {
             text-align: center;
         }
 
