--- a/CV/LabelRegions/index.html
+++ b/CV/LabelRegions/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Morphology Settings</h5>
+                        <h5 class="card-title">Region labelling Settings</h5>
                         <div class="form-group">
                             <label for="imagefile">Select a file image:</label>
                             <br>
@@ -64,7 +64,7 @@
                               </label>
                             </div>
                             <div class="form-check">
-                              <input class="form-check-input" type="radio" name="morphological_operation" id="connectivity8" value="8-connectivity">
+                              <input class="form-check-input" type="radio" name="connectivity" id="connectivity8" value="8-connectivity">
                               <label class="form-check-label" for="connectivity8">
                                 8-connectivity
                               </label>
