--- a/CV/LabelRegions/index.html
+++ b/CV/LabelRegions/index.html
@@ -70,6 +70,10 @@
                               </label>
                             </div>
                             <br>
+                            
+                            <label for="min_region_area">Minimum area of detected regions:</label>
+                            <input type="text" class="form-control" id="min_region_area_text" placeholder="Enter minimum area (e.g.: 10)">
+                            <br>
                         </div>
                         <button class="btn btn-primary" py-click="button">Apply region labelling</button>
                     </div>
