--- a/network/udpsimulator.html
+++ b/network/udpsimulator.html
@@ -1057,9 +1057,9 @@ Payload:
             function addTableEntry(timestamp, sourceIP, targetIP, length, message) {
                 // Check if "No data available" row exists and remove it
                 const noDataRow = packetTableBody.querySelector('.text-center.text-gray-500.italic');
-                if (noDataRow && packetTableBody.contains(noDataRow)) {
+                /*if (noDataRow && packetTableBody.contains(noDataRow)) {
                     packetTableBody.removeChild(noDataRow);
-                }
+                }*/
                 
                 const row = document.createElement('tr');
                 row.innerHTML = `
@@ -1511,5 +1511,4 @@ Missatge desencapsulat: "${message}"`);
             createComputer(500, 100);
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'94353670e598589a',t:'MTc0Nzg0MjQ1MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe>
 </body></html>
