--- a/network/udpsimulator.html
+++ b/network/udpsimulator.html
@@ -210,6 +210,7 @@
                 <div id="workspace" class="workspace flex-1 min-h-[500px] border-2 border-gray-300 relative">
                     <!-- Devices will be added here dynamically -->
                 </div>
+            </div>
             
             <!-- Message Panel -->
             <div class="w-full md:w-96 bg-gray-100 p-4 shadow-md flex flex-col">
