--- a/assembly/playground.html
+++ b/assembly/playground.html
@@ -603,7 +603,7 @@ SUB R4, R2, R1"></textarea>
 
                         if (cmpSrc1 !== undefined && cmpSrc2 !== undefined) {
                             if (cmpSrc1 === cmpSrc2) registersObj['CMP'] = 0;
-                            else if (cmpSrc1 < cmpSrc2]) registersObj['CMP'] = -1;
+                            else if (cmpSrc1 < cmpSrc2) registersObj['CMP'] = -1;
                             else registersObj['CMP'] = 1;
                         }
                         
