--- a/assembly/playground.html
+++ b/assembly/playground.html
@@ -761,6 +761,7 @@ SUB R4, R2, R1"></textarea>
                     break;
                 }
             }*/
+            currentLine = 0;
             while (currentLine < lines.length) {
                 if (!executeLine(lines[currentLine], registersObj, logId)) {
                     success = false;
